Moving help translation in column.

--- a/axelor-auth/src/main/resources/i18n/fr.csv
+++ b/axelor-auth/src/main/resources/i18n/fr.csv
@@ -1,104 +1,104 @@
-"domain","name","type","title","title_t"
-"menu-auth","User Management","menu","User Management","Gestion des utilisateurs"
-"menu-auth-groups","Groups","menu","Groups","Groupes"
-"menu-auth-permissions","Permissions","menu","Permissions","Permissions"
-"menu-auth-permission-wizards","Wizard Permissions","menu","Wizard Permissions","Assistant règle de droit"
-"menu-auth-users","Users","menu","Users","Utilisateurs"
-"com.axelor.auth.db.Group","code","field",,"Code"
-"com.axelor.auth.db.Group","name","field",,"Nom"
-"com.axelor.auth.db.Group","restricted","field",,"Restrictif"
-"com.axelor.auth.db.Group","navigation","field",,"Navigation"
-"com.axelor.auth.db.Group","permissions","field",,"Permissions"
-"com.axelor.auth.db.Permission","name","field",,"Nom"
-"com.axelor.auth.db.Permission","object","field",,"Objet"
-"com.axelor.auth.db.Permission","canRead","field","Read","Lecture"
-"com.axelor.auth.db.Permission","canWrite","field","Write","Modification"
-"com.axelor.auth.db.Permission","canCreate","field","Create","Création"
-"com.axelor.auth.db.Permission","canRemove","field","Remove","Suppression"
-"com.axelor.auth.db.Permission","readCondition","field",,"Condition"
-"com.axelor.auth.db.Permission","readParams","field",,"Paramètres"
-"com.axelor.auth.db.Permission","writeCondition","field",,"Condition"
-"com.axelor.auth.db.Permission","writeParams","field",,"Paramètres"
-"com.axelor.auth.db.Permission","createCondition","field",,"Condition"
-"com.axelor.auth.db.Permission","createParams","field",,"Paramètres"
-"com.axelor.auth.db.Permission","removeCondition","field",,"Condition"
-"com.axelor.auth.db.Permission","removeParams","field",,"Paramètres"
-"com.axelor.auth.db.PermissionWizard","name","field",,"Nom"
-"com.axelor.auth.db.PermissionWizard","targetPackage","field",,"Package cible"
-"com.axelor.auth.db.PermissionWizard","canRead","field","Read","Lecture"
-"com.axelor.auth.db.PermissionWizard","canWrite","field","Write","Ecriture"
-"com.axelor.auth.db.PermissionWizard","canCreate","field","Create","Création"
-"com.axelor.auth.db.PermissionWizard","canRemove","field","Remove","Suppression"
-"com.axelor.auth.db.PermissionWizard","readCondition","field",,"Condition"
-"com.axelor.auth.db.PermissionWizard","readParams","field",,"Parametres"
-"com.axelor.auth.db.PermissionWizard","writeCondition","field",,"Condition"
-"com.axelor.auth.db.PermissionWizard","writeParams","field",,"Parametres"
-"com.axelor.auth.db.PermissionWizard","createCondition","field",,"Condition"
-"com.axelor.auth.db.PermissionWizard","createParams","field",,"Parametres"
-"com.axelor.auth.db.PermissionWizard","removeCondition","field",,"Condition"
-"com.axelor.auth.db.PermissionWizard","removeParams","field",,"Parametres"
-"com.axelor.auth.db.PermissionWizard","groups","field",,"Groupes"
-"com.axelor.auth.db.User","code","field","Login","Identifiant"
-"com.axelor.auth.db.User","name","field",,"Nom"
-"com.axelor.auth.db.User","password","field",,"Mot de passe"
-"com.axelor.auth.db.User","group","field",,"Groupe"
-"select.user.navigation","visible","select","Visible","Visible"
-"select.user.navigation","hidden","select","Hidden","Caché"
-"select.user.navigation","collapse","select","Collapse","Regrouper"
-"group-form","showPermissions","button","Show permissions","Voir les permissions"
-"com.axelor.auth.db.Group","group-form","form","User","Utilisateur"
-"com.axelor.auth.db.Permission",,"grid","Permissions","Permissions"
-"com.axelor.auth.db.Group","group-grid","grid","Groups","Groupes"
-"com.axelor.auth.db.Permission","permission-form","form","Permission","Permission"
-"permission-form",,"group","General","Général"
-"permission-form",,"group","Access","Accès"
-"permission-form",,"group","Read","Lecture"
-"com.axelor.auth.db.Permission","Condition","field","Condition","Conditon"
-"com.axelor.auth.db.Permission","Params","field","Params","Parametres"
-"permission-form",,"group","Write","Écriture"
-"com.axelor.auth.db.Permission","Condition","field","Condition","Conditon"
-"com.axelor.auth.db.Permission","Params","field","Params","Parametres"
-"permission-form",,"group","Create","Création"
-"com.axelor.auth.db.Permission","Condition","field","Condition","Conditon"
-"com.axelor.auth.db.Permission","Params","field","Params","Parametres"
-"permission-form",,"group","Remove","Suppression"
-"com.axelor.auth.db.Permission","Condition","field","Condition","Conditon"
-"com.axelor.auth.db.Permission","Params","field","Params","Parametres"
-"com.axelor.auth.db.Permission","permission-grid","grid","Permissions","Permissions"
-"permission-wizard-form","generate","button","Generate","Générer"
-"permission-wizard-form","showPermissions","button","Show permissions","Voir les permissions"
-"com.axelor.auth.db.PermissionWizard","permission-wizard-form","form","Wizard Permission","Assistant règle de droit"
-"permission-wizard-form",,"group","General","Général"
-"permission-wizard-form",,"group","Access","Accès"
-"permission-wizard-form",,"group","Read","Lecture"
-"com.axelor.auth.db.PermissionWizard","Condition","field","Condition","Condition"
-"com.axelor.auth.db.PermissionWizard","Params","field","Params","Parametres"
-"permission-wizard-form",,"group","Write","Écriture"
-"com.axelor.auth.db.PermissionWizard","Condition","field","Condition","Condition"
-"com.axelor.auth.db.PermissionWizard","Params","field","Params","Parametres"
-"permission-wizard-form",,"group","Create","Création"
-"com.axelor.auth.db.PermissionWizard","Condition","field","Condition","Condition"
-"com.axelor.auth.db.PermissionWizard","Params","field","Params","Parametres"
-"permission-wizard-form",,"group","Remove","Suppression"
-"com.axelor.auth.db.PermissionWizard","Condition","field","Condition","Condition"
-"com.axelor.auth.db.PermissionWizard","Params","field","Params","Parametres"
-"com.axelor.auth.db.PermissionWizard","permission-wizard-grid","grid","Wizard Permissions","Assistant règle de droit"
-"com.axelor.auth.db.User","user-form","form","User","Utilisateur"
-"user-form",,"group","General Info","Informations général"
-"user-form",,"group","Login","Identifiant"
-"com.axelor.auth.db.User","user-grid","grid","Users","Utilisateurs"
-"action-auth-groups","action-auth-groups","action","Groups","Groupes"
-"action-auth-permissions","action-auth-permissions","action","Permissions","Permissions"
-"action-auth-permission-wizards","action-auth-permission-wizards","action","Wizard Permissions","Assistant règle de droit"
-"action-auth-users","action-auth-users","action","Users","Utilisateurs"
-"action-group-validData","action-group-validData","action","Code length should be greater than 2.","La longueur de l'identifiant doit être supérieur à 2"
-"action-group-validData","action-group-validData","action","Name length should be greater than 2.","La longueur du nom doit être supérieur à 2"
-"action-group-view-permissions","action-group-view-permissions","action","Permissions","Permissions"
-"action-permission-wizard-view-permissions","action-permission-wizard-view-permissions","action","Permissions","Permissions"
-"action-user-validData","action-user-validData","action","Password length should be greater than 4.","La longueur du mot de passe doit être supérieur à 2"
-"action-user-validData","action-user-validData","action","Code length should be greater than 2.","La longueur de l'identifiant doit être supérieur à 2"
-"action-user-validData","action-user-validData","action","Name length should be greater than 2.","La longueur du nom doit être supérieur à 2"
-"axelor-auth","Duplicates found:","other","Duplicates found:","Doublons trouvés:"
-"axelor-auth","Not a valid object.","other","Not a valid object.","Objet non valide."
-"axelor-auth","Object found:","other","Object found:","Objet trouvés:"
-"axelor-auth","Only one permission per object is required.","other","Only one permission per object is required.","Une seule permission par objet est requise."
+"domain","name","type","title","title_t","help","help_t"
+"menu-auth","User Management","menu","User Management","Gestion des utilisateurs","",""
+"menu-auth-groups","Groups","menu","Groups","Groupes","",""
+"menu-auth-permissions","Permissions","menu","Permissions","Permissions","",""
+"menu-auth-permission-wizards","Wizard Permissions","menu","Wizard Permissions","Assistant règle de droit","",""
+"menu-auth-users","Users","menu","Users","Utilisateurs","",""
+"com.axelor.auth.db.Group","code","field","","Code","",""
+"com.axelor.auth.db.Group","name","field","","Nom","",""
+"com.axelor.auth.db.Group","restricted","field","","Restrictif","",""
+"com.axelor.auth.db.Group","navigation","field","","Navigation","",""
+"com.axelor.auth.db.Group","permissions","field","","Permissions","",""
+"com.axelor.auth.db.Permission","name","field","","Nom","",""
+"com.axelor.auth.db.Permission","object","field","","Objet","",""
+"com.axelor.auth.db.Permission","canRead","field","Read","Lecture","",""
+"com.axelor.auth.db.Permission","canWrite","field","Write","Modification","",""
+"com.axelor.auth.db.Permission","canCreate","field","Create","Création","",""
+"com.axelor.auth.db.Permission","canRemove","field","Remove","Suppression","",""
+"com.axelor.auth.db.Permission","readCondition","field","","Condition","",""
+"com.axelor.auth.db.Permission","readParams","field","","Paramètres","",""
+"com.axelor.auth.db.Permission","writeCondition","field","","Condition","",""
+"com.axelor.auth.db.Permission","writeParams","field","","Paramètres","",""
+"com.axelor.auth.db.Permission","createCondition","field","","Condition","",""
+"com.axelor.auth.db.Permission","createParams","field","","Paramètres","",""
+"com.axelor.auth.db.Permission","removeCondition","field","","Condition","",""
+"com.axelor.auth.db.Permission","removeParams","field","","Paramètres","",""
+"com.axelor.auth.db.PermissionWizard","name","field","","Nom","",""
+"com.axelor.auth.db.PermissionWizard","targetPackage","field","","Package cible","",""
+"com.axelor.auth.db.PermissionWizard","canRead","field","Read","Lecture","",""
+"com.axelor.auth.db.PermissionWizard","canWrite","field","Write","Ecriture","",""
+"com.axelor.auth.db.PermissionWizard","canCreate","field","Create","Création","",""
+"com.axelor.auth.db.PermissionWizard","canRemove","field","Remove","Suppression","",""
+"com.axelor.auth.db.PermissionWizard","readCondition","field","","Condition","",""
+"com.axelor.auth.db.PermissionWizard","readParams","field","","Parametres","",""
+"com.axelor.auth.db.PermissionWizard","writeCondition","field","","Condition","",""
+"com.axelor.auth.db.PermissionWizard","writeParams","field","","Parametres","",""
+"com.axelor.auth.db.PermissionWizard","createCondition","field","","Condition","",""
+"com.axelor.auth.db.PermissionWizard","createParams","field","","Parametres","",""
+"com.axelor.auth.db.PermissionWizard","removeCondition","field","","Condition","",""
+"com.axelor.auth.db.PermissionWizard","removeParams","field","","Parametres","",""
+"com.axelor.auth.db.PermissionWizard","groups","field","","Groupes","",""
+"com.axelor.auth.db.User","code","field","Login","Identifiant","",""
+"com.axelor.auth.db.User","name","field","","Nom","",""
+"com.axelor.auth.db.User","password","field","","Mot de passe","",""
+"com.axelor.auth.db.User","group","field","","Groupe","",""
+"select.user.navigation","visible","select","Visible","Visible","",""
+"select.user.navigation","hidden","select","Hidden","Caché","",""
+"select.user.navigation","collapse","select","Collapse","Regrouper","",""
+"group-form","showPermissions","button","Show permissions","Voir les permissions","",""
+"com.axelor.auth.db.Group","group-form","form","User","Utilisateurs","",""
+"com.axelor.auth.db.Permission","","grid","Permissions","Permissions","",""
+"com.axelor.auth.db.Group","group-grid","grid","Groups","Groupes","",""
+"com.axelor.auth.db.Permission","permission-form","form","Permission","Permission","",""
+"permission-form","","group","General","Général","",""
+"permission-form","","group","Access","Accès","",""
+"permission-form","","group","Read","Lecture","",""
+"com.axelor.auth.db.Permission","Condition","viewField","Condition","Conditon","",""
+"com.axelor.auth.db.Permission","Params","viewField","Params","Parametres","",""
+"permission-form","","group","Write","Écriture","",""
+"com.axelor.auth.db.Permission","Condition","viewField","Condition","Conditon","",""
+"com.axelor.auth.db.Permission","Params","viewField","Params","Parametres","",""
+"permission-form","","group","Create","Créer","",""
+"com.axelor.auth.db.Permission","Condition","viewField","Condition","Conditon","",""
+"com.axelor.auth.db.Permission","Params","viewField","Params","Parametres","",""
+"permission-form","","group","Remove","Suppression","",""
+"com.axelor.auth.db.Permission","Condition","viewField","Condition","Conditon","",""
+"com.axelor.auth.db.Permission","Params","viewField","Params","Parametres","",""
+"com.axelor.auth.db.Permission","permission-grid","grid","Permissions","Permissions","",""
+"permission-wizard-form","generate","button","Generate","Générer","",""
+"permission-wizard-form","showPermissions","button","Show permissions","Voir les permissions","",""
+"com.axelor.auth.db.PermissionWizard","permission-wizard-form","form","Wizard Permission","Assistant règle de droit","",""
+"permission-wizard-form","","group","General","Général","",""
+"permission-wizard-form","","group","Access","Accès","",""
+"permission-wizard-form","","group","Read","Lecture","",""
+"com.axelor.auth.db.PermissionWizard","Condition","viewField","Condition","Condition","",""
+"com.axelor.auth.db.PermissionWizard","Params","viewField","Params","Parametres","",""
+"permission-wizard-form","","group","Write","Écriture","",""
+"com.axelor.auth.db.PermissionWizard","Condition","viewField","Condition","Condition","",""
+"com.axelor.auth.db.PermissionWizard","Params","viewField","Params","Parametres","",""
+"permission-wizard-form","","group","Create","Créer","",""
+"com.axelor.auth.db.PermissionWizard","Condition","viewField","Condition","Condition","",""
+"com.axelor.auth.db.PermissionWizard","Params","viewField","Params","Parametres","",""
+"permission-wizard-form","","group","Remove","Suppression","",""
+"com.axelor.auth.db.PermissionWizard","Condition","viewField","Condition","Condition","",""
+"com.axelor.auth.db.PermissionWizard","Params","viewField","Params","Parametres","",""
+"com.axelor.auth.db.PermissionWizard","permission-wizard-grid","grid","Wizard Permissions","Assistant règle de droit","",""
+"com.axelor.auth.db.User","user-form","form","User","Utilisateurs","",""
+"user-form","","group","General Info","Informations général","",""
+"user-form","","group","Login","Identifiant","",""
+"com.axelor.auth.db.User","user-grid","grid","Users","Utilisateurs","",""
+"action-auth-groups","action-auth-groups","action","Groups","Groupes","",""
+"action-auth-permissions","action-auth-permissions","action","Permissions","Permissions","",""
+"action-auth-permission-wizards","action-auth-permission-wizards","action","Wizard Permissions","Assistant règle de droit","",""
+"action-auth-users","action-auth-users","action","Users","Utilisateurs","",""
+"action-group-validData","action-group-validData","action","Code length should be greater than 2.","La longueur de l'identifiant doit être supérieur à 2","",""
+"action-group-validData","action-group-validData","action","Name length should be greater than 2.","La longueur du nom doit être supérieur à 2","",""
+"action-group-view-permissions","action-group-view-permissions","action","Permissions","Permissions","",""
+"action-permission-wizard-view-permissions","action-permission-wizard-view-permissions","action","Permissions","Permissions","",""
+"action-user-validData","action-user-validData","action","Password length should be greater than 4.","La longueur du mot de passe doit être supérieur à 2","",""
+"action-user-validData","action-user-validData","action","Code length should be greater than 2.","La longueur de l'identifiant doit être supérieur à 2","",""
+"action-user-validData","action-user-validData","action","Name length should be greater than 2.","La longueur du nom doit être supérieur à 2","",""
+"axelor-auth","Duplicates found:","other","Duplicates found:","Doublons trouvés:","",""
+"axelor-auth","Not a valid object.","other","Not a valid object.","Objet non valide.","",""
+"axelor-auth","Object found:","other","Object found:","Objet trouvés:","",""
+"axelor-auth","Only one permission per object is required.","other","Only one permission per object is required.","Une seule permission par objet est requise.","",""
