Update MetaAuthProfile translation.

--- a/axelor-meta/src/main/resources/i18n/fr.csv
+++ b/axelor-meta/src/main/resources/i18n/fr.csv
@@ -231,3 +231,29 @@
 "axelor-meta","Invalid field value.","other","Invalid field value.","Valeur non valide.","",""
 "axelor-meta","Not implemented yet!","other","Not implemented yet!","Pas encore implémenté!","",""
 "axelor-meta","Please enter your export path fisrt.","other","Please enter your export path fisrt.","Merci de renseigner un chemin d'export.","",""
+"menu-meta-auth-profiles","Auth Profiles","menu","Auth Profiles","Assistant règle de droit","",""
+"com.axelor.meta.db.MetaAuthProfile","name","field","","Nom","",""
+"com.axelor.meta.db.MetaAuthProfile","targetPackage","field","","Package cible","",""
+"com.axelor.meta.db.MetaAuthProfile","canRead","field","Read","Lecture","",""
+"com.axelor.meta.db.MetaAuthProfile","canWrite","field","Write","Ecriture","",""
+"com.axelor.meta.db.MetaAuthProfile","canCreate","field","Create","Création","",""
+"com.axelor.meta.db.MetaAuthProfile","canRemove","field","Remove","Suppression","",""
+"com.axelor.meta.db.MetaAuthProfile","readCondition","field","","Condition","",""
+"com.axelor.meta.db.MetaAuthProfile","readParams","field","","Parametres","",""
+"com.axelor.meta.db.MetaAuthProfile","writeCondition","field","","Condition","",""
+"com.axelor.meta.db.MetaAuthProfile","writeParams","field","","Parametres","",""
+"com.axelor.meta.db.MetaAuthProfile","createCondition","field","","Condition","",""
+"com.axelor.meta.db.MetaAuthProfile","createParams","field","","Parametres","",""
+"com.axelor.meta.db.MetaAuthProfile","removeCondition","field","","Condition","",""
+"com.axelor.meta.db.MetaAuthProfile","removeParams","field","","Parametres","",""
+"com.axelor.meta.db.MetaAuthProfile","groups","field","","Groupes","",""
+"com.axelor.meta.db.MetaAuthProfile","allMenus","field","","Tous les menus ?","",""
+"com.axelor.meta.db.MetaAuthProfile","metaMenus","field","","Menus","",""
+"meta-auth-profile-form","","group","General","Général","",""
+"meta-auth-profile-form","","group","Access","Accès","",""
+"meta-auth-profile-form","","group","Read","Lecture","",""
+"meta-auth-profile-form","generate","button","Generate","Générer","",""
+"meta-auth-profile-form","showPermissions","button","Show permissions","Voir les permissions","",""
+"meta-auth-profile-form","","group","Write","Écriture","",""
+"meta-auth-profile-form","","group","Create","Créer","",""
+"meta-auth-profile-form","","group","Remove","Suppression","",""
