Move role to axelor-auth; Update fr.csv.

--- a/axelor-wkf/src/main/resources/i18n/fr.csv
+++ b/axelor-wkf/src/main/resources/i18n/fr.csv
@@ -3,7 +3,6 @@
 "menu-wkf-configurations","Configurations","menu","Configurations","Configurations","",""
 "menu-wkf-instances","Instances","menu","Instances","Instances","",""
 "menu-wkf-nodes","Nodes","menu","Nodes","Nœuds","",""
-"menu-wkf-roles","Roles","menu","Roles","Les Roles","",""
 "menu-wkf-transitions","Transitions","menu","Transitions","Transitions","",""
 "menu-wkf-workflows","Workflows","menu","Workflows","Les Processus","",""
 "com.axelor.wkf.db.Instance","workflow","field","Workflow","Processus","",""
@@ -25,9 +24,6 @@
 "com.axelor.wkf.db.WaitingNode","instance","field","","Instance","",""
 "com.axelor.wkf.db.WaitingNode","node","field","Node","Noeud","",""
 "com.axelor.wkf.db.WaitingNode","transitions","field","Transitions","Transitions","",""
-"com.axelor.wkf.db.Role","name","field","","Nom","",""
-"com.axelor.wkf.db.Role","description","field","","Description","",""
-"com.axelor.wkf.db.Role","users","field","","Utilisateur","",""
 "com.axelor.wkf.db.Workflow","name","field","","Nom","",""
 "com.axelor.wkf.db.Workflow","metaModel","field","","Model","",""
 "com.axelor.wkf.db.Workflow","node","field","","Noeud","",""
@@ -35,7 +31,8 @@
 "com.axelor.wkf.db.Workflow","condition","field","Condition","Condition","",""
 "com.axelor.wkf.db.Workflow","sequence","field","","Sequence","",""
 "com.axelor.wkf.db.Workflow","description","field","","Description","",""
-"com.axelor.wkf.db.Workflow","active","field","","Active ?","",""
+"com.axelor.wkf.db.Workflow","active","field","","Actif ?","",""
+"com.axelor.wkf.db.Workflow","archived","field","","Archivé ?","",""
 "com.axelor.wkf.db.Workflow","bpmn","field","","BPMN","",""
 "com.axelor.wkf.db.Workflow","xmlData","field","","Données XML","",""
 "com.axelor.wkf.db.Workflow","ref","field","","Ref","",""
@@ -78,9 +75,6 @@
 "com.axelor.wkf.db.Node","node-form","form","Node","Nœud","",""
 "node-form","","separator","Description","Description","",""
 "com.axelor.wkf.db.Node","node-grid","grid","Nodes","Nœuds","",""
-"com.axelor.wkf.db.Role","role-form","form","Role","Role","",""
-"role-form","","separator","Description","Description","",""
-"com.axelor.wkf.db.Role","role-grid","grid","Roles","Les Roles","",""
 "com.axelor.wkf.db.Transition","start-transition-form","form","Transition","Transition","",""
 "start-transition-form","","separator","Description","Description","",""
 "com.axelor.wkf.db.Transition","start-transition-grid","grid","Transitions","Transitions","",""
@@ -99,7 +93,6 @@
 "com.axelor.wkf.db.Workflow","workflow-grid","grid","Workflows","Les Processus","",""
 "action-wkf-instances","action-wkf-instances","action","Instances","Instances","",""
 "action-wkf-nodes","action-wkf-nodes","action","Nodes","Nœuds","",""
-"action-wkf-roles","action-wkf-roles","action","Roles","Les Roles","",""
 "action-wkf-transitions","action-wkf-transitions","action","Transitions","Transitions","",""
 "action-wkf-workflows","action-wkf-workflows","action","Worklows","Processus","",""
 "wkf-validate","wkf-validate","action","Can't save workflow without start node","Impossible de sauvegarder le processus sans le nœud de départ","",""
