Add entity Role.

--- a/axelor-auth/src/main/resources/i18n/fr.csv
+++ b/axelor-auth/src/main/resources/i18n/fr.csv
@@ -3,11 +3,13 @@
 "menu-auth-groups","Groups","menu","Groups","Groupes","",""
 "menu-auth-permissions","Permissions","menu","Permissions","Permissions","",""
 "menu-auth-users","Users","menu","Users","Utilisateurs","",""
+"menu-auth-roles","Roles","menu","Roles","Les Roles","",""
 "com.axelor.auth.db.Group","code","field","","Code","",""
 "com.axelor.auth.db.Group","name","field","","Nom","",""
 "com.axelor.auth.db.Group","restricted","field","","Restrictif","",""
 "com.axelor.auth.db.Group","navigation","field","","Navigation","",""
 "com.axelor.auth.db.Group","permissions","field","","Permissions","",""
+"com.axelor.auth.db.Group","roles","field","","Roles","",""
 "com.axelor.auth.db.Permission","name","field","","Nom","",""
 "com.axelor.auth.db.Permission","object","field","","Objet","",""
 "com.axelor.auth.db.Permission","canRead","field","Read","Lecture","",""
@@ -26,11 +28,18 @@
 "com.axelor.auth.db.User","name","field","","Nom","",""
 "com.axelor.auth.db.User","password","field","","Mot de passe","",""
 "com.axelor.auth.db.User","group","field","","Groupe","",""
+"com.axelor.auth.db.User","roles","field","","Roles","",""
+"com.axelor.auth.db.Role","name","field","","Nom","",""
+"com.axelor.auth.db.Role","description","field","","Description","",""
+"com.axelor.auth.db.Role","users","field","","Utilisateurs","",""
+"com.axelor.auth.db.Role","groups","field","","Groupes","",""
+"com.axelor.auth.db.Role","role-form","form","Role","Role","",""
+"com.axelor.auth.db.Role","role-grid","grid","Roles","Roles","",""
 "select.user.navigation","visible","select","Visible","Visible","",""
 "select.user.navigation","hidden","select","Hidden","Caché","",""
 "select.user.navigation","collapse","select","Collapse","Regrouper","",""
 "group-form","showPermissions","button","Show permissions","Voir les permissions","",""
-"com.axelor.auth.db.Group","group-form","form","User","Utilisateurs","",""
+"com.axelor.auth.db.Group","group-form","form","Group","Groupe","",""
 "com.axelor.auth.db.Permission","","grid","Permissions","Permissions","",""
 "com.axelor.auth.db.Group","group-grid","grid","Groups","Groupes","",""
 "com.axelor.auth.db.Permission","permission-form","form","Permission","Permission","",""
@@ -53,6 +62,8 @@
 "user-form","","group","General Info","Informations général","",""
 "user-form","","group","Login","Identifiant","",""
 "com.axelor.auth.db.User","user-grid","grid","Users","Utilisateurs","",""
+"role-form","","separator","Description","Description","",""
+"action-auth-roles","action-auth-roles","action","Roles","Roles","",""
 "action-auth-groups","action-auth-groups","action","Groups","Groupes","",""
 "action-auth-permissions","action-auth-permissions","action","Permissions","Permissions","",""
 "action-auth-users","action-auth-users","action","Users","Utilisateurs","",""
