Implement diagram represention of Instance

--- a/axelor-wkf/src/main/resources/i18n/fr.csv
+++ b/axelor-wkf/src/main/resources/i18n/fr.csv
@@ -74,6 +74,7 @@
 "com.axelor.wkf.db.InstanceHistory","instance-history-grid","grid","Histories","Historiques","",""
 "com.axelor.wkf.db.Node","node-form","form","Node","Nœud","",""
 "node-form","","separator","Description","Description","",""
+"instance-form","","page","Diagram","Diagramme","",""
 "com.axelor.wkf.db.Node","node-grid","grid","Nodes","Nœuds","",""
 "com.axelor.wkf.db.Transition","start-transition-form","form","Transition","Transition","",""
 "start-transition-form","","separator","Description","Description","",""
@@ -92,6 +93,7 @@
 "workflow-form","","page","XML","XML","",""
 "com.axelor.wkf.db.Workflow","workflow-grid","grid","Workflows","Les Processus","",""
 "action-wkf-instances","action-wkf-instances","action","Instances","Instances","",""
+"action-wkf-my-process","action-wkf-my-process","action","Process","Processus","",""
 "action-wkf-nodes","action-wkf-nodes","action","Nodes","Nœuds","",""
 "action-wkf-transitions","action-wkf-transitions","action","Transitions","Transitions","",""
 "action-wkf-workflows","action-wkf-workflows","action","Worklows","Processus","",""
