--- a/axelor-wkf/src/main/resources/i18n/fr.csv
+++ b/axelor-wkf/src/main/resources/i18n/fr.csv
@@ -8,8 +8,7 @@
 "com.axelor.wkf.db.Instance","workflow","field","Workflow","Processus","",""
 "com.axelor.wkf.db.Instance","metaModelId","field","Model ID","Modèle ID","",""
 "com.axelor.wkf.db.Instance","nodes","field","Nodes","Les Noeuds","",""
-"com.axelor.wkf.db.Instance","waitingNodes","field","","Les Noeuds en attentes","",""
-"com.axelor.wkf.db.Instance","executedNodes","field","Executed nodes","Les Noeuds exécutés","",""
+"com.axelor.wkf.db.Instance","executedTransitions","field","Executed transitions","Les transitions exécutées","",""
 "com.axelor.wkf.db.Instance","creationDate","field","Creation date","Date de création","",""
 "com.axelor.wkf.db.Instance","creationUser","field","User","Utilisateur","",""
 "com.axelor.wkf.db.Instance","histories","field","Histories","Historique","",""
@@ -21,9 +20,6 @@
 "com.axelor.wkf.db.InstanceCounter","instance","field","","Instance","",""
 "com.axelor.wkf.db.InstanceCounter","node","field","Node","Noeud","",""
 "com.axelor.wkf.db.InstanceCounter","counter","field","Counter","Compteur","",""
-"com.axelor.wkf.db.WaitingNode","instance","field","","Instance","",""
-"com.axelor.wkf.db.WaitingNode","node","field","Node","Noeud","",""
-"com.axelor.wkf.db.WaitingNode","transitions","field","Transitions","Transitions","",""
 "com.axelor.wkf.db.Workflow","name","field","","Nom","",""
 "com.axelor.wkf.db.Workflow","metaModel","field","","Model","",""
 "com.axelor.wkf.db.Workflow","node","field","","Noeud","",""
@@ -82,8 +78,6 @@
 "com.axelor.wkf.db.Transition","transition-form","form","Transition","Transition","",""
 "transition-form","","separator","Description","Description","",""
 "com.axelor.wkf.db.Transition","transition-grid","grid","Transitions","Transitions","",""
-"com.axelor.wkf.db.WaitingNode","waiting-node-form","form","Waiting node","nœud d'attente","",""
-"com.axelor.wkf.db.WaitingNode","waiting-node-grid","grid","Waiting nodes","nœuds d'attente","",""
 "workflow-form","openEditor","button","Editor","Éditeur","",""
 "workflow-form","openInstances","button","Instances","Instances","",""
 "com.axelor.wkf.db.Workflow","workflow-form","form","Workflow","Processus","",""
